logo added, z-index fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,13 +8,13 @@
 
 a,
 .green {
-  text-decoration: none;
+  /* text-decoration: none; */
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    /* background-color: hsla(160, 100%, 37%, 0.2); */
   }
 }
 
@@ -25,8 +25,8 @@ a,
   }
 
   #app {
-    /* display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem; */
+    display: grid;
+    /* grid-template-columns: 1fr 1fr; */
+    /* padding: 0 2rem; */
   }
 }
